[project]
name = "pokegrid-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joshua Carney", email = "joshuakcarney@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "aiopokeapi>=0.1.12",
    "load-dotenv>=0.1.0",
    "openai>=2.6.1",
    "pydantic-ai>=0.8.1",
]

[project.scripts]
pokegrid-solver = "pokegrid_solver:main"

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
